# RBFNN-for-Backstepping-couple-dynamic-

./: CMakeLists.txt  README.md  cac_buoc_lam.md  package.xml  walkthrough.md
config/: uam_controller_params.yaml
include/uam_controller/: uam_adaptive_controller.hpp
launch/: uam_system.launch.py
scripts/: arm_dynamics_node.py  arm_gazebo_command_node.py  giai_thich_arm_dynamics_node.md
src/: backstepping_lt.md  uam_backstepping_rbfnn_node.cpp
